--- a/src/pages/Home/FeaturedProperties/Home.css
+++ b/src/pages/Home/FeaturedProperties/Home.css
@@ -3,7 +3,7 @@
     width: 1616px;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 150px;
+    margin-bottom: 120px;
 }
 
 .section_button{
@@ -30,7 +30,7 @@
     width: 1616px;
     justify-content: space-between;
     align-items: end;
-    margin: 110px 0 80px 0;
+    margin: 110px 0 0 0;
 }
 
 .card_img{
@@ -173,6 +173,7 @@
 }
 
 .house_carousel{
+    margin-top: 80px;
     margin-left: 20px;
     width: 1596px;
     height: 726px;
