--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,10 +62,28 @@ li{
     border-radius: 10px;
 }
 
-.navigation_sigInButton{
-    background-color: #141414;
+.favorites{
+    background-color: #202020;
     height: 59px;
     margin: auto 0;
     border: 1px #262626 solid;
     border-radius: 10px;
+    color: white;
+    font-family: "Urbanist", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 150%;
+    font-size: 18px;
+    padding: 0 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.myIcon{
+    height: 20px;
+    margin-right: 10px;
+    width: 20px;
+    fill: rgb(130, 84, 248);
+    cursor: pointer;
 }
